2011-04-18  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [Qt] PluginViewQt needs to update geometry of plugin widget before scheduling a repaint

        When scheduling a repaint for the plugin's widget, PluginViewQt
        needs to make sure the widget's geometry is up to date. Otherwise
        the paint event happens on the widget's old location.

        https://bugs.webkit.org/show_bug.cgi?id=57179

        Added a manual test.

        * manual-tests/qt/plugin-painting.html: Added.
        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::updatePluginWidget):
        (WebCore::PluginView::invalidateRect):

Canonical link: https://commits.webkit.org/73927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84187 268f45cc-cd09-0410-ab3c-d52691b4dbfc